---
source: tests/integration/bits_2_bits.rs
expression: s
---
#pragma mapfile "tests/integration/bits-2-bits/th12-unknown-signature.anmm"

entry {
    path: "subdir/file1.png",
    has_data: false,
    rt_width: 1000,
    rt_height: 1000,
    rt_format: FORMAT_RGB_565,
    memory_priority: 0,
    sprites: {sprite0: {x: 1.0, y: 1.0, w: 111.0, h: 111.0}},
}


script 0 script0 {
    hasNameButNoSignature(@mask=0b101, @blob="00501c46 00000040 00541c46");
    ins_1011(@mask=0b101, @blob="00501c46 00000040 00541c46");
}

